fix /mv + refactoring + aggiunti test